# ROS2--Object-detection-with-YOLO-Model-ONNX

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  dependencies.list  entrypoint.sh  pre_running.sh  requirements.txt  workspace.sh
src/objectdetection/: README.md  package.xml  setup.py
src/objectdetection/launch/: objectdetection.launch.py
src/pkg_camera/: CMakeLists.txt  README.md  camera_publisher.cmake  package.xml
src/pkg_camera/include/: camera_publischer_node.hpp
src/pkg_camera/launch/: camera.launch.py
src/pkg_camera/src/: camera_publisher.cpp  camera_publisher_node.cpp
src/pkg_show/: CMakeLists.txt  README.md  package.xml  show.cmake
src/pkg_show/include/: show_node.hpp
src/pkg_show/launch/: show.launch.py
src/pkg_show/src/: show.cpp  show_node.cpp
src/pkg_yolodetect/: CMakeLists.txt  README.md  package.xml  yolodetect.cmake
src/pkg_yolodetect/include/: fps_tracker.hpp  yolodetect_node.hpp  yoloonnx.hpp
src/pkg_yolodetect/launch/: yolodetect.launch.py
src/pkg_yolodetect/models/: coco.colors
src/pkg_yolodetect/src/: fps_tracker.cpp  yolodetect.cpp  yolodetect_node.cpp  yoloonnx.cpp
src/yolo_msgs/: CMakeLists.txt  README.md  package.xml
src/yolo_msgs/msg/: Detection.msg  DetectionArray.msg
